package com.example.model;

import java.util.List;

public class Calculator {
    public final static String EMPTY = "empty";

    // Multiply two integers
    public int multiply(int a, int b) {
        return a * b;
    }

    public double multiply(double a, int b) {
        return a * b;
    }

    // Concatenate two strings
    public String concat(String a, String b) {
        if (b != null && a != null) {
            return a + b;
        }
        return EMPTY;
    }

    // Add two values
    public double sum(double a, double b) {
        return a + b;
    }

    // Apply a percentage discount
    public double discount(double amount, double percent) {
        if (percent < 0 || percent > 100) {
            throw new IllegalArgumentException("Percentage must be between 0 and 100");
        }
        return amount - (amount * percent / 100.0);
    }

    // Sum a list of values
    public double calculateTotal(List<Double> amounts) {
        return amounts.stream().mapToDouble(Double::doubleValue).sum();
    }
}
