@startuml ModeloClasesSistema
skinparam classAttributeIconSize 0
hide circle

Order "1" o-- "*" Article : contiene 

OrderController --> OrderView : "actualiza" 
OrderController --> Searcher : "usa" 
OrderController "1" *-- "*" Order : "gestiona" 
OrderController ..> Calculator : "invoca" 

class Article {
  -nombre: String
  -cantidad: int
  -precio: double
  -descuento: double
  +getPrecioTotal(): double 
  +getPrecioConDescuento(): double 
}

class Order {
  -idPedido: String
  -articulos: List<Article>
  +getGrossTotal(): double 
  +getDiscountedTotal(): double 
}

class OrderController {
  -view: OrderView
  -orders: List<Order>
  -searcher: Searcher
  +searchOrder(): void 
}

class OrderView {
  -searchField: JTextField
  -resultArea: JTextArea
  +displayOrder(order: Order, rate: double): void [cite: 6]
}

class Searcher {
  +searchExactPhrase(phrase: String, list: List<String>): boolean [cite: 4]
}

class Calculator {
  +{static} calculateTotal(amounts: List<Double>): double [cite: 3]
}

@enduml